--- a/CSS/vision.css
+++ b/CSS/vision.css
@@ -3,7 +3,7 @@
 body{
     font-family: "Lora", serif;
     font-family: "Montserrat", sans-serif;
-    background: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgb(255, 247, 0)); /* Degradado de color para el fondo con opacidad */
+    background: linear-gradient(45deg, rgb(255, 255, 255), rgb(255, 247, 0)); /* Degradado de color para el fondo con opacidad */
     margin: 0; /* Elimina el margen predeterminado del cuerpo */
     padding: 0; /* Elimina el relleno predeterminado del cuerpo */
 }
@@ -20,51 +20,49 @@ a{
     
 }
     .header{
-    background: url(../img/e3.jpg);/*Esto de ../ nos ayuda a retroceder sobre un directorio*/
     background-position: center;/*Aqui le damos el aspecto que tendra la imagen*/
     background-attachment: contain;
     background-size: cover;
-   
-
     display: flex;
     flex-flow: column nowrap;
     }
-        .menu{
-            background: linear-gradient(to bottom, rgba(151, 170, 253, 0.699), rgb(1, 27, 34));
-            display: flex;
-            flex-flow: row nowrap;
-            height: 60px;
-            align-items: center;
-          
+    .menu .interior{
+        background: linear-gradient(to bottom, rgba(151, 170, 253, 0.699), rgb(1, 27, 34));
+        display: flex;
+        flex-flow: row nowrap;
+        height: 60px;
+        align-items: center;
+        
 
+    }
+        .logo{  
+            display: flex;
+            flex:3 1 auto; 
+              
+                  
         }
-            .logo{  
-                display: flex;
-                flex:3 1 auto; 
-                z-index: 2;      
-            }
-            .logo{
-                float: left;
-                padding: 5px 5px 0;
-            }
-            .logo img{
-                height: 80px;
-            }
-            .logo img:hover{
-                transform: scale(1.1);
-            }
-            .nav{
-          
-                flex:5 1 auto; 
-                z-index: 2;             
-            }
-            .nav{
-                float: right;
-                display: flex;
-                align-items: center;
-                min-height: 90px;
-                z-index: 1000;
-            }
+        .logo{
+            float: left;
+            padding: 5px 5px 0;
+        }
+        .logo img{
+            height: 80px;
+        }
+        .logo img:hover{
+            transform: scale(1.1);
+        }
+        .nav{
+      
+            flex:5 1 auto;              
+        }
+        .nav{
+            background: linear-gradient(to bottom, rgba(151, 170, 253, 0.699), rgb(1, 27, 34));
+            float: right;
+            display: flex;
+            align-items: center;
+            min-height: 90px;
+            z-index: 1000;
+        }
             .nav ul{
                 list-style: none;
                 padding: 0 10px;
@@ -145,10 +143,10 @@ margin-top: -100px; /* Ajustar el margen superior */
 }
 
 .visionvideo p{
-font-size: 25px;
+font-size: 20px;
 color: rgb(4, 11, 16);
 text-shadow: 2px 2px 4px #ffffff;
-font-weight: 800;
+font-weight: 500;
 justify-content: space-between;
 width: 100%;
 margin-top:200px; /* Agregar margen superior */
@@ -203,7 +201,7 @@ button:hover {
 }
 .wave{
     position: absolute;
-    bottom: 265px;
+    bottom: 200px;
     left: -0px;
     width: 100%;
     z-index: 1;
