--- a/CSS/mision.css
+++ b/CSS/mision.css
@@ -57,6 +57,7 @@ a{
                 flex:5 1 auto;              
             }
             .nav{
+                font-family: "Quicksand", sans-serif;
                 background: linear-gradient(to bottom, rgba(151, 170, 253, 0.699), rgb(1, 27, 34));
                 float: right;
                 display: flex;
@@ -93,6 +94,8 @@ a{
             .nav ul li a:hover{
                 color: #f7d309;
                 transform: scale(1.1);
+                background: linear-gradient(to bottom, #002454, #0b4d92); /* Degradado de azul oscuro a azul claro */
+                border-radius: 8px;
             }
             
             .nav ul li:hover .hijos{
@@ -149,6 +152,7 @@ margin-top: -100px; /* Ajustar el margen superior */
 }
 
 .misionvideo p{
+font-family: "Quicksand", sans-serif;
 font-size: 20px;
 color: rgb(2, 21, 34);
 text-shadow: 2px 2px 4px #ffffff;
